--- a/index.html
+++ b/index.html
@@ -247,38 +247,38 @@
         </div>
       </div>
     </div>
-    <div class="gray-bg" id="contact-us">
-      <div class="custom-container pad">
+  <div class="gray-bg" id="contact-us">
+    <div class="custom-container pad">
         <form action="" class="contact-us">
-          <b class="blue">
+            <b class="blue">
             Contactează-ne!
           </b>
-          <span class="nothing">
+            <span class="nothing">
             Salut, dacă ai vreo întrebare, nu ezita să ne scrii.  O să îți răspundem în cel mai scurt timp!
           </span>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="element_label">
-                <span class="">Nume Complet*</span>
-                <input type="text">
-              </div>
-              <div class="element_label">
-                <span class="">Adresa Email</span>
-                <input type="text">
-              </div>
-              <div class="element_label">
-                <span class="">Numar Telefon</span>
-                <input type="text">
-              </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="element_label">
+                        <span class="">Nume Complet*</span>
+                        <input type="text">
+                    </div>
+                    <div class="element_label">
+                        <span class="">Adresa Email</span>
+                        <input type="text">
+                    </div>
+                    <div class="element_label">
+                        <span class="">Numar Telefon</span>
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <textarea name="" id=""></textarea>
+                    <input value="Trimite" class="btn blue-btn" type="submit">
+                </div>
             </div>
-            <div class="col-md-8">
-              <textarea name="" id=""></textarea>
-              <input type="submit" value="Trimite" class="btn blue-btn">
-            </div>
-          </div>
         </form>
-      </div>
     </div>
+</div>
     <div class="footer-wrapper">
       <div class="custom-container">
         <div class="row">
