--- a/logo-order.html
+++ b/logo-order.html
@@ -77,90 +77,139 @@
       </div>
     </div>
 
-  <!-- Order Section -->
+    <!-- Order Section -->
 
-  <div class="custom-container pad">
-    <div rel="#website" class="check-id">
+    <div class="custom-container pad">
+      <div class="order-wrapper">
 
-      <!-- Order - Title+Subtitle -->
-      <h1>Mai avem nevoie de câteva informatii</h1>
-      <h6>Logo Design</h6>
-      <form action="" class="order-form">
+        <!-- Order - Title+Subtitle -->
+        <h1>Mai avem nevoie de câteva informatii</h1>
+        <h6 class="order-name">Logo Design</h6>
+        <form action="" class="order-form">
 
-        <!-- Order - 1st Section -->
-        <div class="step first-section active-section">
+          <!-- Order - 1st Section -->
+          <div class="step first-section active-section">
 
-          <div id="step-title">
-            <span class="blue">Pasul 1:</span>
-            <b>Date Personale</b>
-          </div>
+            <div id="step-title">
+              <span class="blue">Pasul 1:</span>
+              <b>Date Personale</b>
+            </div>
 
-          <!-- Order - inputs -->
-          <div class="data">
-            <h6>Nume Complet:</h6>
-            <input type="text" name="name" value="" placeholder="e.g Popescu Ioan" class="inp">
+            <!-- Order - inputs -->
+            <div class="data">
+              <h6>Nume Complet:</h6>
+              <input type="text" name="name" value="" placeholder="e.g Popescu Ioan" class="inp">
 
-            <h6>Email*</h6>
-            <input type="text" name="email" value="" placeholder="nume@gmail.com" required class="inp">
+              <h6>Email*</h6>
+              <input type="text" name="email" value="" placeholder="nume@gmail.com"  class="inp">
 
-            <h6>Telefon</h6>
-            <input type="text" name="" value="" class="inp">
+              <h6>Telefon</h6>
+              <input type="text" name="" value="" class="inp">
 
-            <div id="check"><input type="checkbox" name="vehicle" value="Bike"> Am verificat ca toate datele sa fie introduse corect</div>
+              <div id="check"><input type="checkbox" name="" value=""> Am verificat ca toate datele sa fie introduse corect</div>
 
-          </div>
+            </div>
+            <div class="row step-buttons">
+              <div class="col-md-6">
+                <a href="">Inapoi</a>
+              </div>
+              <div class="col-md-6 right">
+                <a href="" class="order-btn next-step">Urmatorul Pas</a>
+              </div>
+            </div>
 
-          <a href="">Inapoi</a>
-          <a href="" class="order-btn next-step">Urmatorul Pas</a>
-
-        </div>
-
-        <!-- Order - 2nd Section -->
-        <div class="step second-section">
-
-          <div id="step-title">
-            <span class="blue">Pasul 2:</span>
-            <b>Informatii Logo</b>
-          </div>
-
-          <div class="logo-info">
-            <h6>Numele care sa apara in logo*</h6>
-            <input type="text" name="name" value="" placeholder="e.g Logo Company" class="inp">
-
-            <h6>Slogan (daca exista)</h6>
-            <input type="text" name="email" value="" placeholder="e.g slogan" required class="inp">
-
-            <h6>Informatii despre compania ta</h6>
-            <textarea name="name" rows="3" cols="32"></textarea>
-          </div>
-
-          <a href="" class="order-btn next-step">Urmatorul Pas</a>
-
-        </div>
-
-        <!-- Order - 3rd Section -->
-        <div class="step third-section">
-
-          <div id="step-title">
-            <span class="blue">Pasul 3:</span>
-            <b>Aspect Logo</b>
-          </div>
-
-          <div class="logo-info">
-            <h6>Culori</h6>
-            <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
 
 
           </div>
 
-          <a href="" class="order-btn next-step">Finalizare</a>
+          <!-- Order - 2nd Section -->
+          <div class="step second-section">
 
-        </div>
-      </form>
+            <div id="step-title">
+              <span class="blue">Pasul 2:</span>
+              <b>Informatii Logo</b>
+            </div>
+<div class="data">
+            <div class="logo-info">
+              <h6>Numele care sa apara in logo*</h6>
+              <input type="text" name="name" value="" placeholder="e.g Logo Company" class="inp">
+
+              <h6>Slogan (daca exista)</h6>
+              <input type="text" name="email" value="" placeholder="e.g slogan"  class="inp">
+
+              <h6>Informatii despre compania ta</h6>
+              <textarea name="name"></textarea>
+            </div>
+            </div>
+            <div class="row step-buttons">
+              <div class="col-md-6">
+
+              </div>
+              <div class="col-md-6 right">
+                <a href="" class="order-btn next-step">Urmatorul Pas</a>
+              </div>
+            </div>
+
+
+          </div>
+
+          <!-- Order - 3rd Section -->
+          <div class="step third-section">
+
+            <div id="step-title">
+              <span class="blue">Pasul 3:</span>
+              <b>Aspect Logo</b>
+            </div>
+<div class="data">
+            <div class="logo-info">
+              <h6>Culori</h6>
+              <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
+              <div class="type-of-logo">
+                <span>Alege logo preferat:</span>   
+  <label>
+     <input type="checkbox" name="" value=""/>
+     <img src="https://dummyimage.com/100/000/fff">
+  </label>
+  
+  <label>
+    <input type="checkbox" name="" value=""/>
+     <img src="https://dummyimage.com/100/000/fff">
+  </label>
+  
+  <label>
+    <input type="checkbox" name="" value=""/>
+      <img src="https://dummyimage.com/100/000/fff">
+  </label>
+  
+  <label>
+     <input type="checkbox" name="" value=""/>
+    <img src="https://dummyimage.com/100/000/fff">
+  </label>
+    <label>
+     <input type="checkbox" name="" value=""/>
+    <img src="https://dummyimage.com/100/000/fff">
+  </label>
+    <label>
+     <input type="checkbox" name="" value=""/>
+    <img src="https://dummyimage.com/100/000/fff">
+  </label>
+         
+              </div>
+            </div>
+            </div>
+            <div class="row step-buttons">
+              <div class="col-md-6">
+              </div>
+              <div class="col-md-6 right">
+                <a href="" class="order-btn next-step">Finalizare</a>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+
     </div>
-
-
-  </div>
     <div class="footer-wrapper">
       <div class="custom-container">
         <div class="row">
@@ -195,10 +244,10 @@
 
 
 
-  <script src="js/wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
-</body>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+  </body>
 
-</html>
+  </html>
