--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="custom-container  center">
+    <div class="custom-container  center pad">
         <div id="our-projects">
           <div class="projects-menu">
             <a href="" class="active-btn" rel="all">All</a>
@@ -100,7 +100,7 @@
             <a href="" rel="photography">Photography</a>
           </div>
         </div>
-      </div>
+
       <div class="our-projects">
         <div class="all photography">
           <img src="https://media.istockphoto.com/vectors/abstract-linear-emblemtype-wave-flow-emblem-symbol-motion-stream-vector-id684523324?s=2048x2048" alt="">
@@ -123,20 +123,8 @@
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
-        <div class="all photography">
-          <img src="https://media.istockphoto.com/vectors/california-surfing-club-colored-label-on-dark-background-vector-id685499900?s=2048x2048" alt="">
-          <div class="open-project">
-            <span>PROJECT NAME</span>
-            <a href=""><i class="fas fa-share"></i></a>
-          </div>
-        </div >
-        <div class="all webdesign">
-          <img src="https://media.istockphoto.com/vectors/line-symbol-fork-spoon-and-knife-vector-design-element-vector-id655572216?s=2048x2048" alt="">
-          <div class="open-project">
-            <span>PROJECT NAME</span>
-            <a href=""><i class="fas fa-share"></i></a>
-          </div>
-        </div>
+       
+       
         <div class="all print">
           <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
           <div class="open-project">
@@ -144,8 +132,71 @@
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
+         <div class="all photography">
+          <img src="https://media.istockphoto.com/vectors/california-surfing-club-colored-label-on-dark-background-vector-id685499900?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div >
+         <div class="all webdesign">
+          <img src="https://media.istockphoto.com/vectors/line-symbol-fork-spoon-and-knife-vector-design-element-vector-id655572216?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
       </div>
-  
+        </div>
+        <div class="home-order">
+      <div class="v-align">
+        <h4>
+          Cum te putem ajuta?
+        </h4>
+        <span>Am nevoie de</span>
+        <select id="order-input">
+          <option value="0">Alege din lista.</option>
+          <option value="/website-order.html">Website</option>
+          <option value="/logo-order.html">Logo</option>
+          <option value="/design-order.html">Design</option>
+        </select>
+        <div>
+          <input type="submit" class="btn" value="continua" onclick="getOrder()">
+        </div>
+      </div>
+    </div>
+    <div class="gray-bg" id="contact-us">
+    <div class="custom-container pad">
+        <form action="" class="contact-us">
+            <b class="blue">
+            Contactează-ne!
+          </b>
+            <span class="nothing">
+            Salut, dacă ai vreo întrebare, nu ezita să ne scrii.  O să îți răspundem în cel mai scurt timp!
+          </span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="element_label">
+                        <span class="">Nume Complet*</span>
+                        <input type="text">
+                    </div>
+                    <div class="element_label">
+                        <span class="">Adresa Email</span>
+                        <input type="text">
+                    </div>
+                    <div class="element_label">
+                        <span class="">Numar Telefon</span>
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <textarea name="" id=""></textarea>
+                    <input value="Trimite" class="btn blue-btn" type="submit">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
     <div class="footer-wrapper">
       <div class="custom-container">
         <div class="row">
