--- a/portfolio.html
+++ b/portfolio.html
@@ -101,46 +101,92 @@
           </div>
         </div>
 
-      <div class="our-projects">
-        <div class="all photography">
-          <img src="https://media.istockphoto.com/vectors/abstract-linear-emblemtype-wave-flow-emblem-symbol-motion-stream-vector-id684523324?s=2048x2048" alt="">
-          <div class="open-project">
-            <span>PROJECT NAME</span>
-            <a href=""><i class="fas fa-share"></i></a>
-          </div>
-        </div>
-        <div class="all webdesign">
-          <img src="https://media.istockphoto.com/vectors/-vector-id849249752?s=2048x2048" alt="">
-          <div class="open-project">
-            <span>PROJECT NAME</span>
-            <a href=""><i class="fas fa-share"></i></a>
-          </div>
-        </div>
-        <div class="all print">
-          <img src="https://media.istockphoto.com/vectors/vector-illustration-abstract-colorful-triangle-vector-id680665012?s=2048x2048" alt="">
-          <div class="open-project">
-            <span>PROJECT NAME</span>
-            <a href=""><i class="fas fa-share"></i></a>
-          </div>
-        </div>
-       
-       
-        <div class="all print">
+        <div class="our-projects all">
+        <div class="project">
           <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
-         <div class="all photography">
-          <img src="https://media.istockphoto.com/vectors/california-surfing-club-colored-label-on-dark-background-vector-id685499900?s=2048x2048" alt="">
+       <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
           </div>
-        </div >
-         <div class="all webdesign">
-          <img src="https://media.istockphoto.com/vectors/line-symbol-fork-spoon-and-knife-vector-design-element-vector-id655572216?s=2048x2048" alt="">
+        </div>
+         <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+      </div>
+        <div class="our-projects webdesign">
+        <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+       <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+         <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+      </div>
+          <div class="our-projects print">
+        <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+       <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+         <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+      </div>
+        <div class="our-projects photography">
+        <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+       <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+         <div class="project">
+          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
