--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="custom-container  center pad">
+    <div class="  center pad">
         <div id="our-projects">
           <div class="projects-menu">
             <a href="" class="active-btn" rel="all">All</a>
@@ -100,33 +100,56 @@
             <a href="" rel="photography">Photography</a>
           </div>
         </div>
-
+    <div class="projects-wrapper">
         <div class="our-projects all">
         <div class="project">
-          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <img src="images/etradlogo.jpg" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
        <div class="project">
-          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <img src="images/aripaulogo.jpg" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+          <div class="project">
+        <img src="images/bcbociu.jpg" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+        
+          <div class="project">
+        <img src="images/dpclogo.jpg" alt="">
+          <div class="open-project">
+            <span>PROJECT NAME</span>
+            <a href=""><i class="fas fa-share"></i></a>
+          </div>
+        </div>
+           <div class="project">
+        <img src="images/dpcbc.jpg" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
          <div class="project">
-          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+        <img src="images/blanalogo.jpg" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
+          
       </div>
         <div class="our-projects webdesign">
         <div class="project">
-          <img src="https://media.istockphoto.com/vectors/travel-tourism-holidays-and-pleasure-vector-design-vector-id678866340?s=2048x2048" alt="">
+          <img src="images/etradlogo.jpg" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
@@ -192,6 +215,7 @@
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
+      </div>
       </div>
         </div>
         <div class="home-order">
