--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       Testimonials
     </div>
     <div class="testimonials-wrapper">
-   
+
           <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
             <div class="img-wrapper">
               <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
@@ -209,7 +209,7 @@
             </div>
             <div class="testimonial-name">
               BY Antonio Banderas
-              <b>APPLE</b>        
+              <b>APPLE</b>
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
@@ -221,9 +221,9 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aliquam est cumque velit, quas voluptatem eos porro! Mollitia.
             </div>
             <div class="testimonial-name">
-              BY KIM 
+              BY KIM
               <b>FACEBOOK</b>
-            
+
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
@@ -232,19 +232,32 @@
 </div>
     <div class="home-order">
       <div class="v-align">
-        <h4>
-          Cum te putem ajuta?
-        </h4>
-        <span>Am nevoie de</span>
-        <select id="order-input">
-          <option value="0">Alege din lista.</option>
-          <option value="/website-order.html">Website</option>
-          <option value="/logo-order.html">Logo</option>
-          <option value="/design-order.html">Design</option>
-        </select>
-        <div>
-          <input type="submit" class="btn" value="continua" onclick="getOrder()">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="home-order-title">
+            <h6>
+              Acum este mai usor sa comanzi!
+            </h6>
+            <h4>
+              Cum te putem ajuta?
+            </h4>
+          </div>
         </div>
+
+        <div class="col-md-6 right">
+          <span>Am nevoie de</span>
+          <select id="order-input">
+            <option value="0">Alege din lista.</option>
+            <option value="/website-order.html">Website</option>
+            <option value="/logo-order.html">Logo</option>
+            <option value="/design-order.html">Design</option>
+          </select>
+          <div>
+            <input type="submit" class="btn" value="continua" onclick="getOrder()">
+          </div>
+        </div>
+      </div>
+
       </div>
     </div>
   <div class="gray-bg" id="contact-us">
