--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 right">
+        <div class="col-md-6">
           <span>Am nevoie de</span>
           <select id="order-input">
             <option value="0">Alege din lista.</option>
