--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
         </div>
   </div>
 </div>
-    <div class="home-order">
+    <div class="order-section">
       <div class="v-align">
       <div class="row">
         <div class="col-md-6">
-          <div class="home-order-title">
+          <div class="order-section-title">
             <h6>
               Acum este mai usor sa comanzi!
             </h6>
