--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
-        
+
           <div class="project">
         <img src="images/dpclogo.jpg" alt="">
           <div class="open-project">
@@ -145,7 +145,7 @@
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
-          
+
       </div>
         <div class="our-projects webdesign">
         <div class="project">
@@ -218,23 +218,36 @@
       </div>
       </div>
         </div>
-        <div class="home-order">
-      <div class="v-align">
-        <h4>
-          Cum te putem ajuta?
-        </h4>
-        <span>Am nevoie de</span>
-        <select id="order-input">
-          <option value="0">Alege din lista.</option>
-          <option value="/website-order.html">Website</option>
-          <option value="/logo-order.html">Logo</option>
-          <option value="/design-order.html">Design</option>
-        </select>
-        <div>
-          <input type="submit" class="btn" value="continua" onclick="getOrder()">
+        <div class="order-section">
+          <div class="v-align">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="order-section-title">
+                <h6>
+                  Acum este mai usor sa comanzi!
+                </h6>
+                <h4>
+                  Cum te putem ajuta?
+                </h4>
+              </div>
+            </div>
+
+            <div class="col-md-6 center">
+              <span>Am nevoie de</span>
+              <select id="order-input">
+                <option value="0">Alege din lista.</option>
+                <option value="/website-order.html">Website</option>
+                <option value="/logo-order.html">Logo</option>
+                <option value="/design-order.html">Design</option>
+              </select>
+              <div>
+                <input type="submit" class="btn" value="continua" onclick="getOrder()">
+              </div>
+            </div>
+          </div>
+
+          </div>
         </div>
-      </div>
-    </div>
     <div class="gray-bg" id="contact-us">
     <div class="custom-container pad">
         <form action="" class="contact-us">
